@startuml
'https://plantuml.com/class-diagram

hide empty members

enum Player
class Game
class Board <<(T)>>
class Position

Game -> Board : board
Game --> Player : first
<> MapEntry
Board --> "*" MapEntry
MapEntry --> Position : key
Player <- MapEntry : value

Game --> GameState : state
GameState <|-- Run
Run -up-> Player : turn
GameState <|-- Draw
GameState <|-- Win
Win -up-> Player : winner

class Score <<(T)>>
Game --> Score : score
Score -[hidden] GameState




Clash <|-- ClashRun
ClashRun --> Game : game
Name <- ClashRun : name
ClashRun -> Player : side
Clash -> GameStorage : gs
class GameStorage <<(T)>>
@enduml